<resources>
    <string name="app_name">Asimov2023</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="features">Features</string>
    <string name="eliminar">Eliminar</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="meet_all_your_teachers">Meet all your teachers</string>
    <string name="school_year_progress">School year progress</string>
    <string name="days_to_end_school_year">Days to end school year</string>
    <string name="last_announcement">Last Announcement</string>
    <string name="brand_image_descr">brand_Image</string>
    <string name="tv_login_title_text">Iniciar Sesión</string>
    <string name="et_email_hint_text">correo@dominio.com</string>
    <string name="it_password_hint">Contraseña</string>
    <string name="btn_login_text">Ingresar</string>
    <string name="tv_register_text">¿Es tu primera vez? Registrate</string>
    <string name="btn_scrollbtmtext">scroll to bottom</string>
    <string name="tvTermsText"><![CDATA[Terms & Conditions apply]]></string>
</resources>