<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DashboardTeacherActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKnowProgress"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="140dp"
        android:text="@string/let_s_go"
        android:textColor="#858585"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvKnowProgress"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFeaturesTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/features"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDashboardTeacher" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteTeacher"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="115dp"
        android:text="@string/eliminar"
        android:textColor="#858585"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/pbSchoolTeacher" />

    <TextView
        android:id="@+id/tvAnnouncementDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="View Description" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastAnnouncementTeacher"
        tools:text="Announcement" />

    <TextView
        android:id="@+id/tvLastAnnouncementTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/last_announcement"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbSchoolTeacher" />

    <TextView
        android:id="@+id/tvDescriptionProgressbarTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginBottom="17dp"
        android:text="@string/days_to_end_school_year"
        app:layout_constraintBottom_toTopOf="@+id/pbSchoolTeacher"
        app:layout_constraintStart_toEndOf="@+id/tvProgressTeacherPercent" />

    <ProgressBar
        android:id="@+id/pbSchoolTeacher"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="345dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:progress="45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProgressTeacherPercent" />

    <TextView
        android:id="@+id/tvProgressTeacherPercent"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProgressTeacher"
        tools:text="44%" />

    <TextView
        android:id="@+id/tvProgressTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/school_year_progress"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKnowProgress" />

    <TextView
        android:id="@+id/tvDashboardTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dashboard"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKnowProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="Know your progress!"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeaturesTeacher" />
</androidx.constraintlayout.widget.ConstraintLayout>